footer copy right修改

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,7 +112,7 @@
 						
 					</div>
 					<div class="col-md-6 text-right">
-						<p>Copyright © 2016 HIT All rights reserved.</p>
+						<p>Copyright © 2016 HIT HongTong All rights reserved.</p>
 					</div>
 				</div><!-- end row -->
 			</div><!-- end container -->
