--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -48,16 +48,16 @@
 				<div class="col-md-3 col-sm-6">
 					<div class="service-style-1 nobg wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
 						<div class="icon-container border-radius">
-							<% if service.id = 1 || service.id = 5 %>
+							<% if service.id == 1 || service.id == 5 %>
 								<i class="fa fa-cogs"></i>
 							<% end %>
-							<% if service.id = 2 || service.id = 6 %>
+							<% if service.id == 2 || service.id == 6 %>
 								<i class="fa fa-wrench"></i>
 							<% end %>
-							<% if service.id = 3 || service.id = 7 %>
+							<% if service.id == 3 || service.id == 7 %>
 								<i class="fa fa-sun-o"></i>
 							<% end %>
-							<% if service.id = 4 || service.id = 8 %>
+							<% if service.id == 4 || service.id == 8 %>
 								<i class="fa fa-industry"></i>
 							<% end %>
 						</div>
