--- a/app/views/pages/history.html.erb
+++ b/app/views/pages/history.html.erb
@@ -39,7 +39,7 @@
 
 			<div class="col-md-6 col-sm-6 col-xs-12">
 				<!-- 塞內容 -->
-				<%= @page.page_cn.html_safe %>
+				<%= @page.html_safe %>
 			</div><!-- end col -->
 		</div><!-- end row -->
 	</div><!-- end container -->
