--- a/app/views/letters/new.html.erb
+++ b/app/views/letters/new.html.erb
@@ -35,36 +35,11 @@
 				</div>
 			</div><!-- end col -->
 			<div class="col-md-4 col-sm-4 col-xs-12">
-				<div class="contact-info">
-					<h4>聯絡資訊</h4>
-
-						<div class="service-style-2 icon-left row wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-							<div class="col-md-2">
-								<i class="fa fa-envelope"></i>
-							</div>
-							<div class="col-md-10 nopadding">
-								<p>地址:<%= @site.address %></p>
-								<span>mail- <%= @site.mail %></span>
-								<span>tel- <%= @site.tel%> / fax- <%= @site.fax%></span>
-							</div>
-						</div><!-- end service -->
-
-					<div class="clearfix"></div>
-
-					<h4>營業時間</h4>
-
-						<div class="service-style-2 icon-left row wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-							<div class="col-md-2 ">
-								<i class="fa fa-clock-o"></i>
-							</div>
-							<div class="col-md-10 nopadding">
-							<p>Monday – Friday : 9am to 20 pm<br>
-							Saturday : 9am to 17 pm<br>
-							Sunday : day off</p>
-							</div>
-						</div><!-- end service -->
-
-				</div><!-- end contact info -->
+				<% if session[:lang] == 'cn' %>
+					<%= render 'cn' %>
+				<% else %>
+					<%= render 'en' %>
+				<% end %>
 			</div><!-- end col -->
 		</div><!-- end row -->
 	</div><!-- end container -->
