--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <section class="section white">
 	<div class="container">
 		<div class="section-title text-center">
-			<h4>關於我們</h4>
+			<h4>公司簡介</h4>
 			<hr>
 		</div><!-- end title -->
 
@@ -41,7 +41,7 @@
 
 			<div class="col-md-6 col-sm-6 col-xs-12">
 				<!-- 塞內容 -->
-				<%= @page.page_cn.html_safe %>
+				<%= @page.html_safe %>
 			</div><!-- end col -->
 		</div><!-- end row -->
 	</div><!-- end container -->
