--- a/app/views/products/_en.html.erb
+++ b/app/views/products/_en.html.erb
@@ -74,7 +74,7 @@
 <section class="section grey box-shadow">
 	<div class="container">
 		<div class="section-title text-center">
-			<h4>最終完成品</h4>
+			<h4>加工成品</h4>
 			<hr>
 		</div><!-- end title -->
 		<div class="row">
