--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "bootstrap-sprockets";
-@import "bootstrap-wysihtml5/bootstrap3-wysihtml5";
 @import "bootstrap";
+@import "colorbox-rails";
+@import "bootstrap-wysihtml5/bootstrap3-wysihtml5";
 @import "font-awesome";
 @import "carouse";
 @import "style";
