--- a/app/views/products/_cn.html.erb
+++ b/app/views/products/_cn.html.erb
@@ -80,44 +80,37 @@
 		<div class="row">
 		<% @pdts.each do |pdt| %>
 			<% if pdt.img.present? %>
-
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<div class="portfolio-style-1 entry wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
 						<%= image_tag pdt.img_url(:info_r).to_s, class: 'img-responsive' %>
 						<div class="magnifier">
 							<div class="visible-title1 clearfix">
 								<span class="pull-left">
-									<%= link_to "My superb link", pdt.img_url, :data => { :colorbox => true, :colorbox_height => '300px', :colorbox_width => '300px', :colorbox_iframe => true } %>
+									<%= link_to "My superb link", '#', :'data-toggle' => 'modal', :'data-target' => "##{pdt.id}" %>
 								</span>									
 							</div><!-- end visible-title -->
 						</div><!-- end magnifier -->
 					</div><!-- end portfolio -->
-					<div class="invisible-title text-center">
-						<h4></h4>
-					</div><!-- end visible-title -->
 				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<div class="portfolio-style-1 entry wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-						<%= image_tag pdt.img_url(:info_r).to_s, class: 'img-responsive' %>
-						<div class="magnifier">
-							<div class="visible-title1 clearfix">
-								<span class="pull-left">
-									<%= link_to "My superb link", pdt.img_url(:info_r).to_s, :data => { :colorbox => true, :colorbox_height => '300px', :colorbox_width => '300px', :colorbox_iframe => true, :class => 'group3 cboxElement' } %>
-									
-								</span>
-								<span class="pull-right">
-									<a href="#"><i class="fa fa-heart"></i> 300</a>
-								</span>
-							</div><!-- end visible-title -->
-						</div><!-- end magnifier -->
-					</div><!-- end portfolio -->
-					<div class="invisible-title text-center">
-						<h4><a href="portfolio-single-1.html">Project Name</a></h4>
-						<small><a href="portfolio-gallery-wd-rs-3.html">Category</a></small>
-					</div><!-- end visible-title -->
-				</div>
-			<% end %>	
+			<% end %>
 		<% end %>
 		</div><!-- end row -->
 	</div><!-- end container -->
 </section><!-- end section -->
+<% @pdts.each do |pdt| %>
+	<% if pdt.img.present? %>
+		<div class="modal fade" id=<%= pdt.id %> tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <h4 class="modal-title" id="myModalLabel"><%= pdt.title %></h4>
+		      </div>
+		      <div class="modal-body">
+		        <%= image_tag pdt.img_url, class: 'img-responsive' %>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+	<% end %>
+<% end %>
