--- a/app/views/products/_en.html.erb
+++ b/app/views/products/_en.html.erb
@@ -87,7 +87,7 @@
 						<div class="magnifier">
 							<div class="visible-title1 clearfix">
 								<span class="pull-left">
-									<%= link_to "My superb link", '#', :'data-toggle' => 'modal', :'data-target' => "##{pdt.id}" %>
+									<%= link_to pdt.title, '#', :'data-toggle' => 'modal', :'data-target' => "##{pdt.id}" %>
 								</span>									
 							</div><!-- end visible-title -->
 						</div><!-- end magnifier -->
