--- a/app/views/letters/new.html.erb
+++ b/app/views/letters/new.html.erb
@@ -1,9 +1,9 @@
 <section class="section white">
 	<div class="container">
 		<div class="section-title text-center">
-			<h4>聯絡我們</h4>
+			<h4><%= t(:menu_d) %></h4>
 			<hr>
-			<p>We Wanna Hear From You </p>
+			<!-- <p>We Wanna Hear From You </p> -->
 		</div><!-- end title -->
 
 		<div class="row">
