--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <section class="section white">
 	<div class="container">
 		<div class="section-title text-center">
-			<h4>公司簡介</h4>
+			<h4><%= t(:menu_a_a) %></h4>
 			<hr>
 		</div><!-- end title -->
 
