--- a/app/views/products/_en.html.erb
+++ b/app/views/products/_en.html.erb
@@ -39,7 +39,7 @@
 
 			<div class="col-md-4 col-sm-4">
 				<div class="portfolio-widget-title green">
-					<h3><span><font color="gray"><i class="fa fa-camera"></i></span> 產品敘述 :</h3>
+					<h3><span><font color="gray"><i class="fa fa-camera"></i></span> Description :</h3>
 					<hr>
 				</div>
 				<div class="portfolio-description">
@@ -49,7 +49,7 @@
 				<br>
 
 				<div class="portfolio-widget-title green">
-					<h3><span><font color="gray"><i class="fa fa-info"></i></span> 產品特性 :</h3>
+					<h3><span><font color="gray"><i class="fa fa-info"></i></span> Characteristics :</h3>
 					<hr>
 				</div>
 				<div class="portfolio-description">
@@ -59,7 +59,7 @@
 				<br>
 
 				<div class="portfolio-widget-title green">
-					<h3><span><font color="gray"><i class="fa fa-link"></i></span> 產品用途 :</h3>
+					<h3><span><font color="gray"><i class="fa fa-link"></i></span> Applications :</h3>
 					<hr>
 				</div>
 				<div class="portfolio-description">
@@ -75,7 +75,7 @@
 <section class="section grey box-shadow">
 	<div class="container">
 		<div class="section-title text-center">
-			<h4>加工成品</h4>
+			<h4>Finished Products</h4>
 			<hr>
 		</div><!-- end title -->
 		<div class="row">
