--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,7 +11,7 @@
 			<div class="col-md-3">
         <ol class="breadcrumb text-right">
           <li><%=link_to '首頁', index_path %></li>
-          <li class="active">產品詳細說明</li>
+          <li class="active"><% t(:menu_b) %></li>
         </ol>
 			</div>
 		</div>
