--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,8 @@
 						<div class="pull-left">
 							<div class="contactwrap text-left">
 								<ul class="list-inline">
-									<li><i class="fa fa-phone"></i> Call Us : <%= @site.tel %></li>
-									<li><i class="fa fa-envelope"></i> Email Us : <%= @site.mail %></li>
-									<%= t(:hello) %>
+									<li><i class="fa fa-phone"></i> <%= t(:nav_tel) %> : <%= @site.tel %></li>
+									<li><i class="fa fa-envelope"></i><%= t(:nav_mail) %> : <%= @site.mail %></li>
 								</ul>
 							</div><!-- end contactwrap -->
 						</div><!-- end col -->
