--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,7 +10,7 @@
 			</div>
 			<div class="col-md-3">
         <ol class="breadcrumb text-right">
-          <li><%=link_to '首頁', index_path %></li>
+          <li><%=link_to t(:breadcrumb_home), index_path %></li>
           <li class="active"><% t(:menu_b) %></li>
         </ol>
 			</div>
