拿掉連結出現index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
 									<div class="navbar-table">
 										<div class="navbar-cell tight">
 											<div class="navbar-header">
-												<%= link_to index_url do %>
+												<%= link_to root_url do %>
 													<img src="/assets/logo.jpeg" alt="Ova">
 												<% end %>
 												<div>
