edit some issue

--- a/app/views/letters/_cn.html.erb
+++ b/app/views/letters/_cn.html.erb
@@ -21,9 +21,9 @@
 				<i class="fa fa-clock-o"></i>
 			</div>
 			<div class="col-md-10 nopadding">
-			<p>Monday – Friday : 9am to 20 pm<br>
-			Saturday : 9am to 17 pm<br>
-			Sunday : day off</p>
+			<p>營業時間 : 08:00 ~ 17:00<br>
+			服務時間：24HR<br>
+			</p>
 			</div>
 		</div><!-- end service -->
 
