--- a/app/views/letters/_en.html.erb
+++ b/app/views/letters/_en.html.erb
@@ -1,5 +1,5 @@
 <div class="contact-info">
-	<h4>聯絡資訊</h4>
+	<h4>Contact Us</h4>
 
 		<div class="service-style-2 icon-left row wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
 			<div class="col-md-2">
@@ -14,16 +14,16 @@
 
 	<div class="clearfix"></div>
 
-	<h4>營業時間</h4>
+	<h4>Hours</h4>
 
 		<div class="service-style-2 icon-left row wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
 			<div class="col-md-2 ">
 				<i class="fa fa-clock-o"></i>
 			</div>
 			<div class="col-md-10 nopadding">
-			<p>Monday – Friday : 9am to 20 pm<br>
-			Saturday : 9am to 17 pm<br>
-			Sunday : day off</p>
+			<p>Office Hours : 08:00 ~ 17:00<br>
+			Service Hours：24HR<br>
+			</p>
 			</div>
 		</div><!-- end service -->
 
