--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,8 @@
 								<ul class="list-inline">
 									<li><i class="fa fa-phone"></i> <%= t(:nav_tel) %> : <%= @site.tel %></li>
 									<li><i class="fa fa-envelope"></i><%= t(:nav_mail) %> : <%= @site.mail %></li>
+									
+									<%= params[:lang] %>
 								</ul>
 							</div><!-- end contactwrap -->
 						</div><!-- end col -->
@@ -40,6 +42,7 @@
 								<% else %>
 									<li class="English"><a href="?lang=en">EN</a></li>
 								<% end %>
+
 							</ul>
 						</div><!-- end col -->
 					</div>
