--- a/app/views/products/_cn.html.erb
+++ b/app/views/products/_cn.html.erb
@@ -108,6 +108,8 @@
 		      </div>
 		      <div class="modal-body">
 		        <%= image_tag pdt.img_url, class: 'img-responsive' %>
+		        <%= pdt.desc %>
+		        <%= pdt.detail %>
 		      </div>
 		    </div>
 		  </div>
