--- a/app/views/products/_en.html.erb
+++ b/app/views/products/_en.html.erb
@@ -109,8 +109,8 @@
 		      </div>
 		      <div class="modal-body">
 		        <%= image_tag pdt.img_url, class: 'img-responsive' %>
-		        <%= pdt.desc %>
-		        <%= pdt.detail %>
+		        其他用途:<%= pdt.desc %><hr>
+		        泛用於:<%= pdt.detail %>
 		      </div>
 		    </div>
 		  </div>
