--- a/app/views/products/_cn.html.erb
+++ b/app/views/products/_cn.html.erb
@@ -107,7 +107,7 @@
 		        <h4 class="modal-title" id="myModalLabel"><%= pdt.title %></h4>
 		      </div>
 		      <div class="modal-body">
-		        <%= image_tag pdt.img_url, class: 'img-responsive' %>
+		        <%= image_tag pdt.img_url, class: 'img-responsive' %><hr>
 		        其他用途:<%= pdt.desc %><hr>
 		        泛用於:<%= pdt.detail %>
 		      </div>
