--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -39,7 +39,7 @@
 <section class="section white">
 	<div class="container">
 		<div class="section-title text-center">
-			<h4>公司特色</h4>
+			<h4><%= t(:index_s) %></h4>
 			<hr>
 			<!-- <p>Awesome & Great Services Done With Love</p> -->
 		</div><!-- end title -->
