--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1296,6 +1296,7 @@
 	}
 	.service-style-2,
 	.service-style-1 {
+		height: 323px;
 		padding:30px 20px;
 		border:1px solid #d7d7d7;
 		cursor: pointer;
