--- a/app/views/letters/_enf.html.erb
+++ b/app/views/letters/_enf.html.erb
@@ -18,7 +18,7 @@
 			<%= f.text_field :tel, label: 'Phone', class: 'form-control', placeholder: 'Enter your phone' %>
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			<%= f.text_area :msg, label: 'Enter...?' %>
+			<%= f.text_area :msg, label: 'msg' %>
 			<%= f.submit 'Sent', class: 'btn btn-primary btn-block', id: 'submit' %>
 		</div>
 	<% end %>
