--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta property="og:title" content="宏統實業股份有限公司"/>
+	<meta name="og:description" content="工程塑膠訂製加工、高性能工程塑膠、電腦車床精密加工、橡膠製品" />
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="http://www.hongtong.com.tw/"/>
+	<meta property="og:image" content="http://www.hongtong.com.tw/assets/logo.jpeg"/>
+	<meta property="og:site_name" content="宏統實業股份有限公司" />
   <link rel="icon" href="/assets/fa.jpeg" type="image/x-icon" />
   <title>宏統實業 Hong Tong Industrial</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
