--- a/app/views/letters/_en.html.erb
+++ b/app/views/letters/_en.html.erb
@@ -6,7 +6,7 @@
 				<i class="fa fa-envelope"></i>
 			</div>
 			<div class="col-md-10 nopadding">
-				<p>address-<%= @site.address %></p>
+				<p>address-<%= t(:address) %></p>
 				<span>mail- <%= @site.mail %></span>
 				<span>tel- <%= @site.tel%> / fax- <%= @site.fax%></span>
 			</div>
