--- a/app/views/letters/_cn.html.erb
+++ b/app/views/letters/_cn.html.erb
@@ -6,7 +6,7 @@
 				<i class="fa fa-envelope"></i>
 			</div>
 			<div class="col-md-10 nopadding">
-				<p>地址-<%= @site.address %></p>
+				<p>地址-<%= t(:address) %></p>
 				<span>信箱- <%= @site.mail %></span>
 				<span>電話- <%= @site.tel%> / 傳真- <%= @site.fax%></span>
 			</div>
