--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -12,8 +12,8 @@
 		<div class="form-group">
 			<%= e.text_area :detail, label: '產品用途' %>
 		</div>
-		<%= e.file_field :imagea, label: '產品輪播圖' %>
-		<%= e.file_field :imageb, label: '產品輪播圖' %>
+		<%= e.file_field :imagea, label: '(*)產品輪播圖1' %>
+		<%= e.file_field :imageb, label: '產品輪播圖2' %>
 	</div>
 	<div class="panel-body col-md-6">
 	  <div class="form-group">
@@ -28,8 +28,8 @@
 		<div class="form-group">
 			<%= e.text_area :detail_en, label: '產品用途(英)' %>
 		</div>
-		<%= e.file_field :imagec, label: '產品輪播圖' %>
-		<%= e.file_field :imaged, label: '產品輪播圖' %>
+		<%= e.file_field :imagec, label: '產品輪播圖3' %>
+		<%= e.file_field :imaged, label: '產品輪播圖4' %>
 	</div>
 	<div class="col-md-12"><h3>最終完成品</h3><hr></div>
 	<div class="panel-body">
