--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -15,7 +15,7 @@
                 data-elementdelay="0.1"
                 data-endelementdelay="0.1"
                 data-endspeed="1000"
-                style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;">
+                style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;">  -
             </div>
             <div class="tp-caption slider_layer_01 text-center lft tp-resizeme"
                 data-x="center"
@@ -28,7 +28,7 @@
                 data-elementdelay="0.1"
                 data-endelementdelay="0.1"
                 data-endspeed="1000"
-                style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;">
+                style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;">   -
             </div>
         </li>
 			</ul>
