--- a/app/views/letters/_en.html.erb
+++ b/app/views/letters/_en.html.erb
@@ -6,17 +6,11 @@
 				<i class="fa fa-envelope"></i>
 			</div>
 			<div class="col-md-10 nopadding">
-				<p>address-<%= t(:address) %></p>
+				<span>address-<%= t(:address) %></span>
 				<span>mail- <%= @site.mail %></span>
 				<span>tel- <%= @site.tel%> / fax- <%= @site.fax%></span>
 			</div>
-		</div><!-- end service -->
-
-	<div class="clearfix"></div>
-
-	<h4>Hours</h4>
-
-		<div class="service-style-2 icon-left row wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+			<div class="clearfix"></div>
 			<div class="col-md-2 ">
 				<i class="fa fa-clock-o"></i>
 			</div>
@@ -25,6 +19,6 @@
 			Service Hours：24HR<br>
 			</p>
 			</div>
-		</div><!-- end service -->
 
+		</div><!-- end service -->
 </div><!-- end contact info -->
