--- a/app/views/letters/_cn.html.erb
+++ b/app/views/letters/_cn.html.erb
@@ -1,30 +1,23 @@
 <div class="contact-info">
 	<h4>聯絡資訊</h4>
-
-		<div class="service-style-2 icon-left row wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+		<div class="service-style-2 icon-left row wow fadeIn">
 			<div class="col-md-2">
 				<i class="fa fa-envelope"></i>
 			</div>
 			<div class="col-md-10 nopadding">
-				<p>地址-<%= t(:address) %></p>
+				<span>地址-<%= t(:address) %></span>
 				<span>信箱- <%= @site.mail %></span>
 				<span>電話- <%= @site.tel%> / 傳真- <%= @site.fax%></span>
 			</div>
-		</div><!-- end service -->
-
-	<div class="clearfix"></div>
-
-	<h4>營業時間</h4>
-
-		<div class="service-style-2 icon-left row wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+			<div class="clearfix"></div>
+			
 			<div class="col-md-2 ">
 				<i class="fa fa-clock-o"></i>
 			</div>
 			<div class="col-md-10 nopadding">
-			<p>營業時間 : 08:00 ~ 17:00<br>
-			服務時間：24HR<br>
-			</p>
+				<p>營業時間 : 08:00 ~ 17:00<br>
+				服務時間：24HR
+				</p>
 			</div>
 		</div><!-- end service -->
-
 </div><!-- end contact info -->
