--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
 										<div class="navbar-cell tight">
 											<div class="navbar-header">
 												<%= link_to root_url do %>
-													<img src="/assets/logo.jpeg" alt="Ova">
+													<img src="/assets/logo.jpg" alt="Ova">
 												<% end %>
 												<div>
 													<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
