--- a/app/views/letters/new.html.erb
+++ b/app/views/letters/new.html.erb
@@ -8,7 +8,7 @@
 
 		<div class="row">
 			<div class="col-md-8 col-sm-8 col-xs-12">
-				<% if session[:lang] == 'cn' %>
+				<% if sessiㄌon[:lang] == 'cn' %>
 					<%= render 'cnf' %>
 				<% else %>
 					<%= render 'enf' %>
